--- a/SEG_Project_Shiraz/app/src/main/res/layout/activity_attendee1.xml
+++ b/SEG_Project_Shiraz/app/src/main/res/layout/activity_attendee1.xml
@@ -37,7 +37,7 @@
             android:layout_height="25dp" />
 
         <EditText
-            android:id="@+id/organizerName"
+            android:id="@+id/attendeeName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -49,7 +49,7 @@
             android:layout_height="25dp" />
 
         <EditText
-            android:id="@+id/organizerLastName"
+            android:id="@+id/attendeeLastName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -61,7 +61,7 @@
             android:layout_height="25dp" />
 
         <EditText
-            android:id="@+id/organizerPhone"
+            android:id="@+id/attendeePhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -73,7 +73,7 @@
             android:layout_height="25dp" />
 
         <EditText
-            android:id="@+id/organizerAddress"
+            android:id="@+id/attendeeAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
