--- a/SEG_Project_Shiraz/app/src/main/res/layout/welcome_screen.xml
+++ b/SEG_Project_Shiraz/app/src/main/res/layout/welcome_screen.xml
@@ -58,12 +58,9 @@
         android:id="@+id/tableLayout"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/teamLogoId"
-        app:layout_constraintVertical_bias="0.9">
+        app:layout_constraintStart_toStartOf="parent">
 
 
         <!-- First Row -->
@@ -129,17 +126,6 @@
         </TableRow>
 
     </TableLayout>
-
-    <ImageView
-        android:id="@+id/teamLogoId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="108dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_logo_00" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
