--- a/SEG_Project_Shiraz/app/src/main/res/layout/activity_attendee1.xml
+++ b/SEG_Project_Shiraz/app/src/main/res/layout/activity_attendee1.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/userRoleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#527689EF"
