--- a/SEG_Project_Shiraz/app/src/main/res/layout/activity_organizer1.xml
+++ b/SEG_Project_Shiraz/app/src/main/res/layout/activity_organizer1.xml
@@ -8,7 +8,7 @@
     tools:context=".Organizer_1">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/userRoleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#527689EF"
