--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_attendee1.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_attendee1.xml
@@ -5,25 +5,25 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="visible"
-    tools:context=".Organizer_2">
+    tools:context=".Attendee_1">
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="0dp"
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#527689EF"
-        android:text="Organizer Account Registration "
+        android:text="Attendee Account Registration"
         android:textAlignment="center"
         android:textSize="30dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/linearLayout3"
+        android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -37,71 +37,72 @@
             android:layout_height="25dp" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Organization name" />
+            android:text="First name" />
 
         <EditText
-            android:id="@+id/organizationName"
+            android:id="@+id/attendeeName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
-            android:text="Name" />
+            android:text="First name" />
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="25dp" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Organization Email" />
+            android:text="Last name" />
 
         <EditText
-            android:id="@+id/organizerEmail"
+            android:id="@+id/attendeeLastName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textEmailAddress"
-            android:text="Email Address" />
+            android:inputType="text"
+            android:text="Last Name" />
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="25dp" />
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/textView10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Password" />
+            android:text="Phone number" />
 
         <EditText
-            android:id="@+id/organizerPassword"
-            android:layout_width="match_parent"
+            android:id="@+id/organizerPhone"
+            android:layout_width="299dp"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPassword"
-            android:visibility="visible" />
+            android:inputType="phone"
+            android:text="Phone number" />
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="25dp" />
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/textView11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Confirm password" />
+            android:text="Address" />
 
         <EditText
-            android:id="@+id/organizerConfirmPassword"
+            android:id="@+id/attendeeAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPassword" />
+            android:inputType="textPostalAddress"
+            android:text="Address" />
 
         <Space
             android:layout_width="match_parent"
@@ -113,24 +114,25 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/backButton_o2"
+                android:id="@+id/backButton_o1"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#3F51B5"
                 android:text="Back" />
 
             <Space
-                android:layout_width="100dp"
+                android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/submitButton"
+                android:id="@+id/nextButton"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#3F51B5"
-                android:text="Submit" />
+                android:text="Next" />
         </LinearLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
