--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_attendee2.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_attendee2.xml
@@ -5,25 +5,24 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Organizer_1">
+    tools:context=".Attendee_2">
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView7"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#527689EF"
-        android:text="Organizer Account Registration"
+        android:text="Attendee Account Registration "
         android:textAlignment="center"
         android:textSize="30dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -36,73 +35,55 @@
             android:layout_width="match_parent"
             android:layout_height="25dp" />
 
+
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textView13"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="First name" />
+            android:text="Email" />
 
         <EditText
-            android:id="@+id/organizerName"
+            android:id="@+id/attendeeEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="text"
-            android:text="First name" />
+            android:inputType="textEmailAddress"
+            android:text="Email Address" />
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="25dp" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/textView14"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Last name" />
+            android:text="Password" />
 
         <EditText
-            android:id="@+id/organizerLastName"
+            android:id="@+id/attendeePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="text"
-            android:text="Last Name" />
+            android:inputType="textPassword"
+            android:visibility="visible" />
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="25dp" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/textView15"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Phone number" />
+            android:text="Confirm password" />
 
         <EditText
-            android:id="@+id/organizerPhone"
-            android:layout_width="299dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="phone"
-            android:text="Phone number" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="25dp" />
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Address" />
-
-        <EditText
-            android:id="@+id/organizerAddress"
+            android:id="@+id/attendeeConfirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPostalAddress"
-            android:text="Address" />
+            android:inputType="textPassword" />
 
         <Space
             android:layout_width="match_parent"
@@ -114,25 +95,24 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/backButton_o1"
+                android:id="@+id/backButton_o2"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#3F51B5"
                 android:text="Back" />
 
             <Space
-                android:layout_width="75dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/nextButton"
+                android:id="@+id/submitButton"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#3F51B5"
-                android:text="Next" />
+                android:text="Submit" />
         </LinearLayout>
-
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
