updating Attendee files

--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_attendee1.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_attendee1.xml
@@ -79,7 +79,7 @@
             android:text="Phone number" />
 
         <EditText
-            android:id="@+id/organizerPhone"
+            android:id="@+id/attendeePhone"
             android:layout_width="299dp"
             android:layout_height="wrap_content"
             android:ems="10"
