--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/welcome_attendee.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/welcome_attendee.xml
@@ -128,6 +128,17 @@
 
         </TableRow>
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/logOut"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Log Out" />
+        </TableRow>
+
     </TableLayout>
 
 
