--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_main.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
 
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/buttonSignIn"
             android:layout_width="250dp"
             android:layout_height="100dp"
             android:layout_marginTop="5dp"
