--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/welcome_attendee.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/welcome_attendee.xml
@@ -136,6 +136,7 @@
                 android:id="@+id/logOut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="#3F51B5"
                 android:text="Log Out" />
         </TableRow>
 
