--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/welcome_organizer.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/welcome_organizer.xml
@@ -135,6 +135,7 @@ android:layout_height="match_parent"
             android:id="@+id/logOut"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="#3F51B5"
             android:text="Log Out" />
     </TableRow>
 
