--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_main.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_main.xml
@@ -20,11 +20,15 @@
         <TextView
             android:id="@+id/textView4"
             android:layout_width="250dp"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:text="Welcome back!"
             android:textAlignment="center"
-            android:textSize="27dp" />
+            android:textSize="40dp" />
 
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="25dp" />
 
         <Button
             android:id="@+id/buttonSignIn"
@@ -32,7 +36,12 @@
             android:layout_height="100dp"
             android:layout_marginTop="5dp"
             android:backgroundTint="#3F51B5"
-            android:text="Sign in" />
+            android:text="Sign in"
+            android:textSize="27dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="50dp" />
 
         <TextView
             android:id="@+id/textView5"
@@ -42,13 +51,18 @@
             android:textAlignment="center"
             android:textSize="27dp" />
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="25dp" />
+
         <Button
             android:id="@+id/registerButton"
             android:layout_width="250dp"
             android:layout_height="100dp"
             android:backgroundTint="#3F51B5"
             android:onClick="setOnClickListener"
-            android:text="Register" />
+            android:text="Register"
+            android:textSize="27dp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
