--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/admin.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/admin.xml
@@ -6,6 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ListView
+        android:id="@+id/listView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/button8"
+        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
@@ -23,39 +31,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ListView
-        android:id="@+id/listView2"
+    <TextView
+        android:id="@+id/textView16"
         android:layout_width="match_parent"
-        android:layout_height="131dp"
-        app:layout_constraintBottom_toBottomOf="@+id/button8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <TextView
-            android:id="@+id/textView16"
-            android:layout_width="match_parent"
-            android:layout_height="47dp"
-            android:text="List of registration request"
-            android:textSize="20dp" />
-
-        <Space
-            android:layout_width="251dp"
-            android:layout_height="151dp"
-            android:layout_weight="1" />
-
-    </LinearLayout>
+        android:layout_height="47dp"
+        android:text="List of registration request"
+        android:textSize="20dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
