--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_admin.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_admin.xml
@@ -7,29 +7,11 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/listView2"
+        android:id="@+id/lvPendingList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/button8"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="approve"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="reject"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView16"
