--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/pendadmin.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/pendadmin.xml
@@ -17,7 +17,7 @@
         android:id="@+id/textView16"
         android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:text="List of registration request"
+        android:text="List of pending request"
         android:textSize="20dp"
         app:layout_constraintTop_toTopOf="parent" />
 
