--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_attendee1.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_attendee1.xml
@@ -114,7 +114,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/backButton_A1"
+                android:id="@+id/backButton"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#3F51B5"
