--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_selection.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_selection.xml
@@ -5,14 +5,17 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbarSize="50dp"
     tools:context=".SelectionActivity">
 
     <TextView
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="160dp"
+        android:scrollbarSize="10dp"
         android:text="Please select your user type"
+        android:textSize="21dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,8 +23,8 @@
 
     <Button
         android:id="@+id/buttonAttendee"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="221dp"
+        android:layout_height="99dp"
         android:text="Sign in as Attendee"
         app:layout_constraintBottom_toTopOf="@+id/buttonOrganizer"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,8 +33,8 @@
 
     <Button
         android:id="@+id/buttonAdministrator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="226dp"
+        android:layout_height="101dp"
         android:layout_marginBottom="100dp"
         android:text="Sign in as Administrator"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -41,8 +44,8 @@
 
     <Button
         android:id="@+id/buttonOrganizer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="222dp"
+        android:layout_height="104dp"
         android:text="Sign in as Organizer"
         app:layout_constraintBottom_toTopOf="@+id/buttonAdministrator"
         app:layout_constraintEnd_toEndOf="parent"
