--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/sign_in.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/sign_in.xml
@@ -7,18 +7,19 @@
 
     <TextView
         android:id="@+id/main"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="414dp"
+        android:layout_height="57dp"
         android:background="#527689EF"
         android:text="Sign In"
         android:textAlignment="center"
         android:textSize="30dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.01999998" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
         android:id="@+id/linearLayout4"
