--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/sign_in.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/sign_in.xml
@@ -25,8 +25,8 @@
         android:id="@+id/linearLayout4"
         android:layout_width="275dp"
         android:layout_height="551dp"
-        android:layout_marginTop="60dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
