created the adminReject activity so admin can see rejected users now

--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_admin_sign_in.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_admin_sign_in.xml
@@ -83,4 +83,17 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/buttonback"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:text="back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.012"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
