--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_selection.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/activity_selection.xml
@@ -51,4 +51,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonAttendee" />
+
+
+    <Button
+        android:id="@+id/buttonback"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
