--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/list_item.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/list_item.xml
@@ -94,6 +94,14 @@
             android:text="OrganizationName:"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
+        <TextView
+            android:id="@+id/textViewUserRole"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="UserRole:"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
@@ -106,7 +114,7 @@
 
         <Button
             android:id="@+id/buttonApprove"
-            android:layout_width="0dp"
+            android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginEnd="90dp"
@@ -115,7 +123,7 @@
 
         <Button
             android:id="@+id/buttonReject"
-            android:layout_width="0dp"
+            android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginStart="90dp"
