--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/pendadmin.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/pendadmin.xml
@@ -24,12 +24,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/textView16"
         app:layout_constraintBottom_toTopOf="@id/backButton"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView16"
+        app:layout_constraintVertical_bias="1.0"
         tools:listitem="@android:layout/simple_list_item_1" />
-
 
     <Button
         android:id="@+id/backButton"
