--- a/SEG_Project_Shiraz_Updated/app/src/main/res/layout/event_item.xml
+++ b/SEG_Project_Shiraz_Updated/app/src/main/res/layout/event_item.xml
@@ -35,7 +35,7 @@
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="wrap_content"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:text="Details" />
     </LinearLayout>
