--- a/SEG Project V2/app/src/main/res/layout/event_item.xml
+++ b/SEG Project V2/app/src/main/res/layout/event_item.xml
@@ -45,15 +45,14 @@
                 android:layout_height="wrap_content"
                 android:text="Details" />
             <View
-                android:layout_width="30dp"
+                android:layout_width="10dp"
                 android:layout_height="wrap_content" />
 
 
             <Button
                 android:id="@+id/button_attendees"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="See List of Attendees" />
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
