--- a/SEG Project V2/app/src/main/res/layout/activity_event_list2.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_event_list2.xml
@@ -20,13 +20,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <ListView
         android:id="@+id/lvPendingListEvents"
-        android:layout_width="350dp"
-        android:layout_height="487dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView26" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView26"
+        app:layout_constraintBottom_toTopOf="@+id/button_goBack"
+        app:layout_constraintHeight_default="wrap" />
 
     <Button
         android:id="@+id/button_goBack"
