--- a/SEG Project V2/app/src/main/res/layout/activity_organizer_see_attendee_event_requests.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_organizer_see_attendee_event_requests.xml
@@ -38,4 +38,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/button_approveAll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:text="Approve All"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
