--- a/SEG Project V2/app/src/main/res/layout/activity_admin_upcomingevents.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_admin_upcomingevents.xml
@@ -7,25 +7,27 @@
     android:layout_height="match_parent"
     tools:context=".Event_list_2">
 
-    <ListView
-        android:id="@+id/lvUpcomingEvents"
-        android:layout_width="319dp"
-        android:layout_height="487dp"
+    <TextView
+        android:id="@+id/textView26"
+        android:layout_width="400dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="60dp"
+        android:background="#527689EF"
+        android:text="Upcoming Events"
+        android:textAlignment="center"
+        android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView26" >
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            android:id="@+id/textView26"
-            android:layout_width="425dp"
-            android:layout_height="68dp"
-            android:layout_marginTop="60dp"
-            android:background="#527689EF"
-            android:text="Upcoming Events"
-            android:textAlignment="center"
-            android:textSize="30dp"
-            android:textStyle="bold" />
-    </ListView>
+    <ListView
+        android:id="@+id/lvUpcomingEvents"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView26"
+        app:layout_constraintBottom_toTopOf="@+id/button_goBack"
+        app:layout_constraintHeight_default="wrap" />
 
     <Button
         android:id="@+id/button_goBack"
