--- a/SEG Project V2/app/src/main/res/layout/activity_create_event.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_create_event.xml
@@ -160,16 +160,11 @@
                 android:layout_height="match_parent">
 
                 <RadioButton
-                    android:id="@+id/radioButton"
+                    android:id="@+id/autoYes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Yes" />
 
-                <RadioButton
-                    android:id="@+id/radioButton2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="No, Manually" />
             </RadioGroup>
         </LinearLayout>
 
