--- a/SEG Project V2/app/src/main/res/layout/event_item.xml
+++ b/SEG Project V2/app/src/main/res/layout/event_item.xml
@@ -40,7 +40,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/button_details"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:text="Details" />
