Added validations for events

--- a/SEG Project V2/app/src/main/res/layout/activity_create_event.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_create_event.xml
@@ -83,7 +83,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Date of event"
+            android:hint="DD/MM/YYYY"
             android:inputType="date" />
 
         <Space
