created MyEvents button

--- a/SEG Project V2/app/src/main/res/layout/activity_welcome_page.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_welcome_page.xml
@@ -157,4 +157,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createEvent_button"
         android:visibility="gone" />
+
+    <Button
+        android:id="@+id/attendeeEventsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="My Events"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/seeEvents_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/upcomingEventsButton"
+        app:layout_constraintVertical_bias="0.816" />
 </androidx.constraintlayout.widget.ConstraintLayout>
