added the status to the events for attendee

--- a/SEG Project V2/app/src/main/res/layout/event_item_attendee.xml
+++ b/SEG Project V2/app/src/main/res/layout/event_item_attendee.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,6 +30,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Event Date:" />
+
+        <TextView
+            android:id="@+id/textview_eventRequestStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Status of your request:" />
 
         <Space
             android:layout_width="match_parent"
