search works now!

--- a/SEG Project V2/app/src/main/res/layout/activity_welcome_page.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_welcome_page.xml
@@ -170,4 +170,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/upcomingEventsButton"
         app:layout_constraintVertical_bias="0.816" />
+
+    <Button
+        android:id="@+id/searchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Search"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/attendeeEventsButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
