Attendee list of upcoming events implemented

--- a/SEG Project V2/app/src/main/res/layout/activity_admin_upcomingevents.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_admin_upcomingevents.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".See_Events_Organizer">
+    tools:context=".ViewEvents">
 
     <TextView
         android:id="@+id/textView26"
