--- a/SEG Project V2/app/src/main/res/layout/activity_admin_sign_in.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_admin_sign_in.xml
@@ -9,10 +9,11 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="431dp"
+        android:layout_height="67dp"
         android:background="#527689EF"
-        android:text="Sign in to your account!"
+        android:gravity="center"
+        android:text="Account Sign In"
         android:textAlignment="center"
         android:textSize="30dp"
         android:textStyle="bold"
@@ -79,7 +80,9 @@
             android:id="@+id/SignInButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign in" />
+            android:backgroundTint="#3F51B5"
+            android:text="Sign in"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
@@ -87,11 +90,14 @@
         android:id="@+id/buttonback"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:text="back"
+        android:layout_marginStart="25dp"
+        android:layout_marginBottom="25dp"
+        android:backgroundTint="#3F51B5"
+        android:text="Back"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.012"
+        app:layout_constraintHorizontal_bias="0.051"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView17"
         app:layout_constraintVertical_bias="1.0" />
