--- a/SEG Project V2/app/src/main/res/layout/activity_admin_upcomingevents.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_admin_upcomingevents.xml
@@ -5,29 +5,35 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#3F51B5"
     tools:context=".ViewEvents">
 
     <TextView
         android:id="@+id/textView26"
-        android:layout_width="400dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="430dp"
+        android:layout_height="71dp"
+        android:layout_marginTop="52dp"
         android:background="#527689EF"
-        android:text="Upcoming Events"
+        android:gravity="center"
+        android:text="Up-Coming Events"
         android:textAlignment="center"
         android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/lvUpcomingEvents"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView26"
+        android:layout_width="337dp"
+        android:layout_height="459dp"
         app:layout_constraintBottom_toTopOf="@+id/button_goBack"
-        app:layout_constraintHeight_default="wrap" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="wrap"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView26"
+        app:layout_constraintVertical_bias="0.434" />
 
     <Button
         android:id="@+id/button_goBack"
@@ -35,7 +41,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginBottom="25dp"
-        android:text="back"
+        android:backgroundTint="#3F51B5"
+        android:text="Back"
+        android:textColorLink="#3F51B5"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
