--- a/SEG Project V2/app/src/main/res/layout/activity_create_event.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_create_event.xml
@@ -13,9 +13,9 @@
         android:id="@+id/textView6"
         android:layout_width="415dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="16dp"
         android:background="#527689EF"
-        android:text="NEW EVENT                             \CREATION"
+        android:text="New Event                             \Creation"
         android:textAlignment="inherit"
         android:textSize="30dp"
         android:textStyle="bold"
@@ -24,8 +24,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="339dp"
-        android:layout_height="582dp"
+        android:layout_width="340dp"
+        android:layout_height="547dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/buttonCreate"
         app:layout_constraintEnd_toEndOf="parent"
@@ -145,7 +145,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="61dp"
             android:orientation="horizontal">
 
             <TextView
@@ -169,20 +169,24 @@
     <Button
         android:id="@+id/buttonCancel"
         android:layout_width="130dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="4dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginBottom="25dp"
+        android:backgroundTint="#3F51B5"
         android:text="Cancel"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buttonCreate"
         android:layout_width="130dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="4dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp"
+        android:backgroundTint="#3F51B5"
         android:text="Create"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
