--- a/SEG Project V2/app/src/main/res/layout/activity_organizer2.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_organizer2.xml
@@ -10,14 +10,15 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="410dp"
+        android:layout_height="86dp"
+        android:layout_marginTop="55dp"
         android:background="#527689EF"
+        android:gravity="center"
         android:text="Organizer Account Registration "
         android:textAlignment="center"
         android:textSize="30dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,16 +26,15 @@
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/textView7">
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="25dp" />
+            android:layout_height="45dp" />
 
         <TextView
             android:id="@+id/textView12"
@@ -117,7 +117,8 @@
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#3F51B5"
-                android:text="Back" />
+                android:text="Back"
+                android:textSize="16dp" />
 
             <Space
                 android:layout_width="100dp"
@@ -129,7 +130,8 @@
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:backgroundTint="#3F51B5"
-                android:text="Submit" />
+                android:text="Submit"
+                android:textSize="16dp" />
         </LinearLayout>
     </LinearLayout>
 
